--- a/veoc/templates/veoc/truck_driver_registration.html
+++ b/veoc/templates/veoc/truck_driver_registration.html
@@ -180,13 +180,25 @@
                        </div>
                      </div>
                      <div class="form-row" id="comobidity_details_div">
-                       <div class="form-group col-md-6">
+                       <div class="form-group col-md-3">
+                         <label for="temperature">Temperature : *</label>
+                         <input class="form-control" type=number step=0.01 id="temperature" name="temperature" onchange="checkTemp()" maxlength="5" placeholder="temperature"/>
+                       </div>
+                       <div class="form-group col-md-3">
                          <label for="comorbidity">Comorbidity : </label>
                          <input class="form-control" type="text" id="comorbidity" name="comorbidity" placeholder="comorbidity"/>
                        </div>
-                       <div class="form-group col-md-6">
+                       <div class="form-group col-md-3">
                          <label for="drugs">Any drugs on? : </label>
                          <input class="form-control" type="text" id="drugs" name="drugs" placeholder="Drugs"/>
+                       </div>
+                         <div class="form-group col-md-3">
+                         <label for="communication_language">Communication Language (SMS) : </label>
+                         <select class="form-control" id="communication_language" name="communication_language">
+                              {% for lang in language %}
+                                  <option value="{{lang.id}}">{{lang.language_name}}</option>
+                              {% endfor %}
+                         </select>
                        </div>
                     </div>
                      <div class="form-row col-md-12">
@@ -328,7 +340,7 @@
             if(data == "error"){
               Swal.fire({
                 title: 'Duplicate Data Entry!!',
-                text: 'Names and Phone number entered already exist in the system !!',
+                text: 'Names and Phone number entered already exist in the system and still ongoing quarantine!!',
                 icon: 'info'
               });
             }else{
@@ -354,14 +366,6 @@
       });
 
     });
-
-    function get_checkbox_value() {
-        if ($('#priority').attr('checked')) {
-            $('#priority').val('1');
-        } else {
-            $('#priority').val('0');
-        }
-    }
 
      function region_filter(){
         var _region = document.getElementById('country').value;
@@ -449,6 +453,28 @@
            icon: 'error'
          });
          document.getElementById("phone_number").focus();
+       }
+     }
+
+    function checkTemp(){
+       var temp = $('#temperature').val();
+       // console.log(number);
+       if(temp.length > 4 || temp.length < 2){
+         console.log("Enter valid temperature");
+         Swal.fire({
+           title: 'error!',
+           text: 'Enter a valid temperature measure',
+           icon: 'error'
+         });
+         document.getElementById("temperature").focus();
+       }else if(temp < 34 || temp > 45){
+         console.log("Enter country code with +")
+         Swal.fire({
+           title: 'error!',
+           text: 'Temperature value should be between 34 and 45 Degrees',
+           icon: 'error'
+         });
+         document.getElementById("temperature").focus();
        }
      }
 
