Quarantine truck driver added temperature details

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -175,6 +175,8 @@
                           class="fa fa-child fa-stack-1x "></i></span>Events Register</a></li>
                   <li><a href="/quarantine_register"><span class="fa-stack fa-lg pull-left"><i
                       class="fa fa-archive fa-stack-1x "></i></span>Corona Quarantine</a></li>
+{#                   <li><a href="/test_profile"><span class="fa-stack fa-lg pull-left"><i#}
+{#                      class="fa fa-archive fa-stack-1x "></i></span>Test Profile</a></li>#}
               </ul>
           </li>
           <li>
