--- a/veoc/templates/veoc/truck_quarantine_complete.html
+++ b/veoc/templates/veoc/truck_quarantine_complete.html
@@ -13,7 +13,7 @@
         				</ul>
         			</div><!-- /breadcrumb-->
 
-              <div class="panel-heading"><b>COVID19 Quarantine Complete Contact Tracing and Follow Up Report</b></div>
+              <div class="panel-heading"><b>COVID19 Quarantine Complete Follow Up Report</b></div>
 
         			<div class="padding-md">
         				<div class="row">
@@ -21,51 +21,39 @@
         						<div class="panel panel-default table-responsive">
         							<div class="panel-heading">
         								Completed Quarantine Report
-        								<span class="label label-info pull-right" id="totalspan">{{follow_data_count}} Reported cases </span>
+        								<span class="label label-info pull-right" id="totalspan">{{all_data_count}} cases </span>
         							</div>
         							<div class="padding-md clearfix">
         							<table class="table table-hover" id="quarantine_complete_report">
         								<thead class="thead-dark">
                           <tr>
-                            <th>Last Name</th>
+                            <th>Last Names</th>
                             <th>First Name</th>
-                            <th>Age</th>
+                            <th>DOB</th>
                             <th>Gender</th>
-                            <th>Contact</th>
+                            <th>Mobile</th>
+                            <th>Passport No</th>
+                            <th>Nationality</th>
                             <th>Origin Country</th>
-                            <th>Date of last contact</th>
-                            <th>Follow up Day</th>
-                            <th>Has Thermometer</th>
-                            <th>Temperature</th>
-                            <th>Has Fever?</th>
-                            <th>Has Cough?</th>
-                            <th>Difficulty in breathing?</th>
-                            <th>Has Thermal Gun?</th>
-                            <th>Reported Date</th>
+{#                            <th>Weighbridge Site</th>#}
+                            <th>date of contact</th>
+                            <th>Registered by</th>
                           </tr>
                           </thead>
                           <tbody>
-                          {% for follow in follow_data %}
+                          {% for q_data in all_data %}
                           <tr>
-                            <td>{{ follow.patient_contacts.last_name }}</td>
-                            <td>{{ follow.patient_contacts.first_name }}</td>
-                            <td>{{ follow.patient_contacts.age }}</td>
-                            <td>{{ follow.patient_contacts.sex }}</td>
-                            <td>{{ follow.patient_contacts.phone_number }}</td>
-                            <td>{{ follow.patient_contacts.origin_country }}</td>
-                            <td>{{ follow.patient_contacts.date_of_contact|date:'d-m-Y' }}</td>
-                            <td>{{ follow.follow_up_day }}</td>
-                            {% if follow.thermal_gun == "t" %}
-                              <td>Yes</td>
-                            {% else %}
-                              <td>No</td>
-                            {% endif %}
-                            <td>{{ follow.body_temperature }}</td>
-                            <td>{{ follow.fever }}</td>
-                            <td>{{ follow.cough }}</td>
-                            <td>{{ follow.difficulty_breathing }}</td>
-                            <td>{{ follow.thermal_gun }}</td>
-                            <td>{{ follow.created_at|date:'d-m-Y' }}</td>
+                            <td>{{ q_data.last_name }}</td>
+                            <td>{{ q_data.first_name }}</td>
+                            <td>{{ q_data.age}}</td>
+                            <td>{{ q_data.sex }}</td>
+                            <td>{{ q_data.phone_number }}</td>
+                            <td>{{ q_data.passport_number }}</td>
+                            <td>{{ q_data.nationality }}</td>
+                            <td>{{ q_data.origin_country }}</td>
+{#                            <td>{{ q_data.weighbridge_facility }}</td>#}
+                            <td>{{ q_data.date_of_contact }}</td>
+                            <td>{{ q_data.created_by }}</td>
                           </tr>
                         {% endfor %}
                       </tbody>
