--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -35,7 +35,8 @@
           type="text/css"/>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js" type="text/javascript"></script>-->
+    <script src="/static/js/qrcode.js" type="text/javascript"></script>
+    <script src="/static/js/qrcode.min.js" type="text/javascript"></script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAc-WwoLvPhsVHIKQ3OHLXYr2S4rV8QQP8&libraries=visualization&callback=initMap">
     </script>
